header logo reposition and fix product detail alignment

--- a/src/style/Catalogue.scss
+++ b/src/style/Catalogue.scss
@@ -1,9 +1,9 @@
 .Catalogue {
-  margin: 6em 0;
+  margin: 4em 0 12em;
 }
 
 .Catalogue__item {
-  margin-bottom: 2em;
+  margin-bottom: 0.5em;
 }
 
 @media screen and (min-width: 300px) {
