--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -3,11 +3,12 @@
   background: white;
   color: black;
   padding: 0.75em 0;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid lightgray;
 }
 
 .Header__logo {
-  margin: auto;
+  // margin: auto;
+  margin-left: 1.25em;
   width: 12%;
   @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
     width: 18%;
@@ -17,8 +18,9 @@
 .Header__cart {
   position: absolute;
   top: 50%;
+  right: 15px;
   margin-top: -12px;
-  margin-left: 1.25em;
+  // margin-left: 1.25em;
   cursor: pointer;
   background-color: white;
   border: none;
