--- a/src/style/Product.scss
+++ b/src/style/Product.scss
@@ -1,5 +1,6 @@
 .Product {
-  margin: 0.25em;
+  // margin: 0.25em;
+  padding-bottom: 2em;
   text-decoration: none;
   text-align: center;
   color: black;
@@ -10,7 +11,7 @@
 }
 
 .Product__image {
-  padding: 1em;
+  padding: 0.5em;
   width: 100%;
   position: relative;
   margin: auto;
@@ -34,8 +35,9 @@
 // redundant styling, already have product__details below
 
 .Product__name {
-  // text-align: center;
   font-family: "Courier New", Courier, monospace;
+  text-align: left;
+  padding-left: 0.75em;
   width: 100%;
   // font-weight: bold;
   text-transform: uppercase;
@@ -46,6 +48,8 @@
   font-size: 0.8em;
   font-weight: normal;
   color: #000000;
+  text-align: left;
+  padding-left: 1em;
 }
 
 .Product__type {
